# tech-connect-2026-sk-modernizer

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  SKILL.md  azure.yaml
.github/: copilot-instructions.md
.github/agents/: modernmint-planner.md  modernmint-spec.md
.github/instructions/: modernization-domain.instructions.md  modernmint-planner.instructions.md  modernmint-spec.instructions.md
AIAppsModernization/: .dockerignore  .env  .env.example  Dockerfile  README.md  __init__.py  main.py  modernizer_agent.py  openapi.yaml  pyproject.toml  requirements.txt  tools.py
SemanticKernelSamples/: .env  README.md  joke_agent_MAF.py  joke_agent_autogen.py  joke_agent_sk.py  requirements.txt
docs/specs/: SemanticKernelSamples-modernization-spec.md
infra/terraform/: .terraform.lock.hcl  backend.tf  data.tf  deploy-infra.sh  locals.tf  main.tf  outputs.tf  (+2 more)
infrastructure/: 00_START_HERE.txt  DEPLOYMENT_GUIDE.md  Dockerfile  INDEX.md  INFRASTRUCTURE_SUMMARY.md  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md  child-acr.json  child-ai-hub.json  child-ai-project.json  child-apim.json  child-keyvault.json  child-monitoring.json  child-network.json  child-storage.json  deploy-infrastructure.ps1  deploy-summary.sh  deploy.html  docker-compose.yml  master-parameters.json  master-template.json  nginx.conf  parameters.json  prometheus.yml  template.json  test-acr-parameters.json  test-acr-template.json
plans/: implementation-plan.md  phase-1-setup.md  phase-2-sk-transforms.md  phase-3-autogen-transforms.md  phase-4-integration.md  phase-5-validation.md
(+29 files in other folders)
